# e-commerce-backend

./: .env.example  .gitignore  README.md  backup-ecommerce.sql  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  y  y.pub
alembic/: env.py
alembic/versions/: 20260518_001_initial_schema.py  20260518_002_auth_and_extensions.py  20260518_003_user_avatar_url.py  20260526_004_product_pending_status.py
app/: __init__.py  main.py
app/admin/: __init__.py
app/ai/: __init__.py
app/ai/agents/: __init__.py
app/ai/embeddings/: __init__.py
app/ai/personalization/: __init__.py
app/ai/ranking/: __init__.py
app/ai/recommendations/: __init__.py
app/ai/search/: __init__.py
app/api/v1/: api.py
app/api/v1/routes/: admin.py  auth.py  categories.py  customer.py  health.py  products.py  profile.py  seller_orders.py  seller_products.py  status.py
app/core/: __init__.py  config.py  constants.py  database.py  db_url.py  dependencies.py  exceptions.py  logging.py  security.py  startup.py
app/customer/: __init__.py
app/db/: seed.py
app/events/: __init__.py
app/jobs/: __init__.py
app/middleware/: __init__.py
app/models/: __init__.py  address.py  admin_ext.py  ai_embeddings.py  ai_ext.py  auth.py  base.py  cart.py  catalog.py  commerce_ext.py  coupon.py  enums.py  inventory.py  notification.py  order.py  review.py  seller.py  seller_ext.py  system_ext.py  transaction.py  user.py
app/repositories/: __init__.py  auth.py  base.py  category.py  product.py  seller.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  common.py  order.py  product.py  profile.py
app/seller/: __init__.py
app/services/: __init__.py  admin.py  auth.py  cloudinary_storage.py  oauth.py  order.py  product.py  profile.py
app/services/email/: __init__.py  service.py  templates.py
app/utils/: __init__.py  slug.py  user_response.py
app/validators/: __init__.py
app/websockets/: __init__.py
docs/: IMPLEMENTATION_PLAN.md  api-structure.md  architecture.md  database.md  deployment.md  project-context.md
docs/progress/: day-01.md  day-02.md  day-03.md  day-04.md  template.md
scripts/: migrate.ps1  migrate.sh  render-build.sh
src/shnoor/: __init__.py  main.py
src/shnoor/api/v1/: health.py  router.py
src/shnoor/core/: config.py  logging.py
tests/: conftest.py  test_auth.py  test_email_service.py  test_health.py  test_status.py
