[project]
name = "shnoor-backend"
version = "0.1.0"
description = "Scalable e-commerce SaaS backend for SHNOOR marketplace"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "SHNOOR Engineering" }]
keywords = ["ecommerce", "fastapi", "saas", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
shnoor-api = "shnoor.main:run"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shnoor"]

[tool.hatch.build.targets.sdist]
include = ["src/shnoor", "README.md", "docs"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]
"src/shnoor/core/config.py" = ["S104"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
packages = ["shnoor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
