[project]
name = "shnoor-backend"
version = "0.2.0"
description = "Scalable AI-ready e-commerce SaaS backend for SHNOOR marketplace"
readme = "README.md"
# Local dev may use 3.14; Render deploys 3.12.8 (see .python-version / runtime.txt)
requires-python = ">=3.12,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "SHNOOR Engineering" }]
keywords = ["ecommerce", "fastapi", "postgresql", "saas", "async", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.35",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.4.0",
    "email-validator>=2.2.0",
    "itsdangerous>=2.2.0",
    "cloudinary>=1.41.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "pylint>=3.3.0",
]

[project.scripts]
shnoor-api = "app.main:run"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["app", "tests"]

[tool.pylint.main]
py-version = "3.12"
jobs = 0

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
